--- a/Enhanced_Lightweight_Image_Denoising_Networks_with_Adaptive_Feature_Fusion.ipynb
+++ b/Enhanced_Lightweight_Image_Denoising_Networks_with_Adaptive_Feature_Fusion.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMSkZzjz7ChRHJNmU0bqeL8",
+      "authorship_tag": "ABX9TyPOCXUaECzXrG1braFhxvV7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -410,6 +410,217 @@
       },
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn as nn\n",
+        "\n",
+        "class sum_squared_error(_Loss):\n",
+        "    \"\"\"Sum Squared Error loss function\"\"\"\n",
+        "    def __init__(self, size_average=None, reduce=None, reduction='sum'):\n",
+        "        super(sum_squared_error, self).__init__(size_average, reduce, reduction)\n",
+        "\n",
+        "    def forward(self, input, target):\n",
+        "        return torch.nn.functional.mse_loss(input, target, reduction='sum') / 2\n",
+        "\n",
+        "class UNet_Denoiser(nn.Module):\n",
+        "    \"\"\"Simplified UNet for image denoising\"\"\"\n",
+        "    def __init__(self, in_channels=3, out_channels=3):\n",
+        "        super(UNet_Denoiser, self).__init__()\n",
+        "\n",
+        "        # Encoder\n",
+        "        self.enc1 = nn.Sequential(\n",
+        "            nn.Conv2d(in_channels, 48, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(48, 48, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "        self.pool1 = nn.MaxPool2d(2)\n",
+        "\n",
+        "        self.enc2 = nn.Sequential(\n",
+        "            nn.Conv2d(48, 96, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(96, 96, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "        self.pool2 = nn.MaxPool2d(2)\n",
+        "\n",
+        "        self.enc3 = nn.Sequential(\n",
+        "            nn.Conv2d(96, 192, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(192, 192, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "        self.pool3 = nn.MaxPool2d(2)\n",
+        "\n",
+        "        # Bottleneck\n",
+        "        self.bottleneck = nn.Sequential(\n",
+        "            nn.Conv2d(192, 384, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(384, 384, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "\n",
+        "        # Decoder\n",
+        "        self.upconv3 = nn.ConvTranspose2d(384, 192, 2, stride=2)\n",
+        "        self.dec3 = nn.Sequential(\n",
+        "            nn.Conv2d(384, 192, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(192, 192, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "\n",
+        "        self.upconv2 = nn.ConvTranspose2d(192, 96, 2, stride=2)\n",
+        "        self.dec2 = nn.Sequential(\n",
+        "            nn.Conv2d(192, 96, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(96, 96, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "\n",
+        "        self.upconv1 = nn.ConvTranspose2d(96, 48, 2, stride=2)\n",
+        "        self.dec1 = nn.Sequential(\n",
+        "            nn.Conv2d(96, 48, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(48, 48, 3, padding=1),\n",
+        "            nn.ReLU(inplace=True)\n",
+        "        )\n",
+        "\n",
+        "        # Output layer\n",
+        "        self.final_conv = nn.Conv2d(48, out_channels, 1)\n",
+        "\n",
+        "        # Attention mechanism\n",
+        "        self.attention = nn.Sequential(\n",
+        "            nn.AdaptiveAvgPool2d(1),\n",
+        "            nn.Conv2d(48, 24, 1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(24, 48, 1),\n",
+        "            nn.Sigmoid()\n",
+        "        )\n",
+        "\n",
+        "        self._init_weights()\n",
+        "\n",
+        "    def _init_weights(self):\n",
+        "        for m in self.modules():\n",
+        "            if isinstance(m, (nn.Conv2d, nn.ConvTranspose2d)):\n",
+        "                nn.init.kaiming_normal_(m.weight, mode='fan_out', nonlinearity='relu')\n",
+        "                if m.bias is not None:\n",
+        "                    nn.init.constant_(m.bias, 0)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # Encoder\n",
+        "        e1 = self.enc1(x)\n",
+        "        e1_pooled = self.pool1(e1)\n",
+        "\n",
+        "        e2 = self.enc2(e1_pooled)\n",
+        "        e2_pooled = self.pool2(e2)\n",
+        "\n",
+        "        e3 = self.enc3(e2_pooled)\n",
+        "        e3_pooled = self.pool3(e3)\n",
+        "\n",
+        "        # Bottleneck\n",
+        "        bottleneck = self.bottleneck(e3_pooled)\n",
+        "\n",
+        "        # Decoder\n",
+        "        d3 = self.upconv3(bottleneck)\n",
+        "        d3 = torch.cat([d3, e3], dim=1)\n",
+        "        d3 = self.dec3(d3)\n",
+        "\n",
+        "        d2 = self.upconv2(d3)\n",
+        "        d2 = torch.cat([d2, e2], dim=1)\n",
+        "        d2 = self.dec2(d2)\n",
+        "\n",
+        "        d1 = self.upconv1(d2)\n",
+        "        d1 = torch.cat([d1, e1], dim=1)\n",
+        "        d1 = self.dec1(d1)\n",
+        "\n",
+        "        # Apply attention\n",
+        "        attention_weights = self.attention(d1)\n",
+        "        d1 = d1 * attention_weights\n",
+        "\n",
+        "        # Output\n",
+        "        output = self.final_conv(d1)\n",
+        "\n",
+        "        return output\n",
+        "\n",
+        "# Model analysis\n",
+        "model = UNet_Denoiser()\n",
+        "print(\"Model Architecture Analysis:\")\n",
+        "\n",
+        "# Count parameters\n",
+        "total_params = sum(p.numel() for p in model.parameters())\n",
+        "trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+        "\n",
+        "print(f\"Total parameters: {total_params:,}\")\n",
+        "print(f\"Trainable parameters: {trainable_params:,}\")\n",
+        "\n",
+        "# Architecture summary\n",
+        "architecture_info = []\n",
+        "for name, module in model.named_modules():\n",
+        "    if isinstance(module, (nn.Conv2d, nn.ConvTranspose2d, nn.MaxPool2d)):\n",
+        "        if hasattr(module, 'in_channels'):\n",
+        "            info = f\"{module.__class__.__name__}({module.in_channels}->{module.out_channels})\"\n",
+        "        else:\n",
+        "            info = f\"{module.__class__.__name__}\"\n",
+        "        architecture_info.append([name, info])\n",
+        "\n",
+        "# Create architecture table\n",
+        "arch_df = pd.DataFrame(architecture_info[:15], columns=['Layer Name', 'Description'])  # Show first 15 layers\n",
+        "print(\"\\nModel Architecture (First 15 layers):\")\n",
+        "print(arch_df)\n",
+        "\n",
+        "# Visualize architecture\n",
+        "plt.figure(figsize=(15, 10))\n",
+        "\n",
+        "plt.subplot(2, 2, 1)\n",
+        "plt.bar(['Total', 'Trainable'], [total_params, trainable_params])\n",
+        "plt.title('Parameter Count')\n",
+        "plt.ylabel('Number of Parameters')\n",
+        "\n",
+        "plt.subplot(2, 2, 2)\n",
+        "# Test forward pass with dummy input\n",
+        "dummy_input = torch.randn(1, 3, 256, 256)\n",
+        "with torch.no_grad():\n",
+        "    dummy_output = model(dummy_input)\n",
+        "plt.text(0.1, 0.8, f\"Input Shape: {list(dummy_input.shape)}\", transform=plt.gca().transAxes, fontsize=12)\n",
+        "plt.text(0.1, 0.6, f\"Output Shape: {list(dummy_output.shape)}\", transform=plt.gca().transAxes, fontsize=12)\n",
+        "plt.text(0.1, 0.4, f\"Parameters: {total_params:,}\", transform=plt.gca().transAxes, fontsize=12)\n",
+        "plt.text(0.1, 0.2, f\"Model Size: {total_params * 4 / 1024**2:.2f} MB\", transform=plt.gca().transAxes, fontsize=12)\n",
+        "plt.title('Model Information')\n",
+        "plt.axis('off')\n",
+        "\n",
+        "plt.subplot(2, 1, 2)\n",
+        "plt.table(cellText=arch_df.values, colLabels=arch_df.columns, loc='center', cellLoc='left')\n",
+        "plt.axis('off')\n",
+        "plt.title(\"Model Architecture Summary\")\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(f'{base_dir}/output/model_architecture.png', dpi=300, bbox_inches='tight')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "3YHXz6gsiAb4",
+        "outputId": "b8de10e8-5e77-40c4-b568-7063f8e77941"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name '_Loss' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-31e8784f14e2>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0msum_squared_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_Loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"\"\"Sum Squared Error loss function\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msize_average\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduce\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'sum'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name '_Loss' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
