try to fix the error

--- a/Dementia_Detection.ipynb
+++ b/Dementia_Detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMVGawAqywAbvCb2l0XpRfZ",
+      "authorship_tag": "ABX9TyPIvlnzoc5eiNxz/rdEnlX9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,6 +51,36 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Install required packages for Colab\n",
+        "def install_requirements():\n",
+        "    \"\"\"Install required packages for Google Colab\"\"\"\n",
+        "    packages = [\n",
+        "        'librosa',\n",
+        "        'transformers',\n",
+        "        'torch-geometric',\n",
+        "        'SpeechRecognition',\n",
+        "        'textstat',\n",
+        "        'networkx',\n",
+        "        'pyaudio',\n",
+        "        'pydub'\n",
+        "    ]\n",
+        "\n",
+        "    for package in packages:\n",
+        "        try:\n",
+        "            os.system(f'pip install -q {package}')\n",
+        "        except:\n",
+        "            print(f\"Failed to install {package}\")\n",
+        "install_requirements()"
+      ],
+      "metadata": {
+        "id": "6dh-EYH-f0Sf"
+      },
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -89,25 +119,7 @@
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "print(f\"Using device: {device}\")\n",
         "\n",
-        "# Install required packages for Colab\n",
-        "def install_requirements():\n",
-        "    \"\"\"Install required packages for Google Colab\"\"\"\n",
-        "    packages = [\n",
-        "        'librosa',\n",
-        "        'transformers',\n",
-        "        'torch-geometric',\n",
-        "        'SpeechRecognition',\n",
-        "        'textstat',\n",
-        "        'networkx',\n",
-        "        'pyaudio',\n",
-        "        'pydub'\n",
-        "    ]\n",
         "\n",
-        "    for package in packages:\n",
-        "        try:\n",
-        "            os.system(f'pip install -q {package}')\n",
-        "        except:\n",
-        "            print(f\"Failed to install {package}\")\n",
         "\n",
         "# Data paths configuration\n",
         "class DataConfig:\n",
@@ -739,13 +751,6 @@
         "    \"\"\"Main function to run the entire pipeline\"\"\"\n",
         "    print(\"Initializing AD Classification System...\")\n",
         "\n",
-        "    # Install requirements (uncomment for first run)\n",
-        "    # install_requirements()\n",
-        "\n",
-        "    # Mount Google Drive (uncomment for Colab)\n",
-        "    # from google.colab import drive\n",
-        "    # drive.mount('/content/drive')\n",
-        "\n",
         "    # Initialize configuration\n",
         "    config = DataConfig()\n",
         "\n",
@@ -794,7 +799,7 @@
         "    visualizer = FeatureVisualizer()\n",
         "\n",
         "    # Example audio file path (replace with actual path)\n",
-        "    audio_path = \"/content/drive/MyDrive/Voice/extracted/ADReSSo21/diagnosis/train/audio/ad/sample.wav\"\n",
+        "    audio_path = \"/content/drive/MyDrive/Voice/extracted/ADReSSo21/diagnosis/train/audio/ad/adrso024.wav\"\n",
         "\n",
         "    if os.path.exists(audio_path):\n",
         "        print(f\"Processing: {audio_path}\")\n",
@@ -821,92 +826,35 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 401
         },
         "id": "FDkfks6bVDd0",
-        "outputId": "83046255-b62f-4e03-8fa8-b5984acf3d22"
+        "outputId": "cd97b2c2-5b8c-4f78-ca7e-7b92324fd5bc"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Using device: cuda\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install SpeechRecognition\n",
-        "!pip install textstat torch_geometric"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "T06rRCaKWLmy",
-        "outputId": "c710830e-8d8b-4f96-9c84-3e669ea87a3a"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting SpeechRecognition\n",
-            "  Downloading speechrecognition-3.14.3-py3-none-any.whl.metadata (30 kB)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.11/dist-packages (from SpeechRecognition) (4.13.2)\n",
-            "Downloading speechrecognition-3.14.3-py3-none-any.whl (32.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m32.9/32.9 MB\u001b[0m \u001b[31m66.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: SpeechRecognition\n",
-            "Successfully installed SpeechRecognition-3.14.3\n",
-            "Collecting textstat\n",
-            "  Downloading textstat-0.7.7-py3-none-any.whl.metadata (15 kB)\n",
-            "Collecting torch_geometric\n",
-            "  Downloading torch_geometric-2.6.1-py3-none-any.whl.metadata (63 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m63.1/63.1 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting pyphen (from textstat)\n",
-            "  Downloading pyphen-0.17.2-py3-none-any.whl.metadata (3.2 kB)\n",
-            "Collecting cmudict (from textstat)\n",
-            "  Downloading cmudict-1.0.32-py3-none-any.whl.metadata (3.6 kB)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.11/dist-packages (from textstat) (75.2.0)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.11/dist-packages (from torch_geometric) (3.11.15)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch_geometric) (2025.3.2)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from torch_geometric) (3.1.6)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from torch_geometric) (2.0.2)\n",
-            "Requirement already satisfied: psutil>=5.8.0 in /usr/local/lib/python3.11/dist-packages (from torch_geometric) (5.9.5)\n",
-            "Requirement already satisfied: pyparsing in /usr/local/lib/python3.11/dist-packages (from torch_geometric) (3.2.3)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from torch_geometric) (2.32.3)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from torch_geometric) (4.67.1)\n",
-            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->torch_geometric) (2.6.1)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from aiohttp->torch_geometric) (1.3.2)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->torch_geometric) (25.3.0)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from aiohttp->torch_geometric) (1.6.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.11/dist-packages (from aiohttp->torch_geometric) (6.4.4)\n",
-            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->torch_geometric) (0.3.1)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->torch_geometric) (1.20.0)\n",
-            "Requirement already satisfied: importlib-metadata>=5 in /usr/local/lib/python3.11/dist-packages (from cmudict->textstat) (8.7.0)\n",
-            "Requirement already satisfied: importlib-resources>=5 in /usr/local/lib/python3.11/dist-packages (from cmudict->textstat) (6.5.2)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from jinja2->torch_geometric) (3.0.2)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->torch_geometric) (3.4.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->torch_geometric) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->torch_geometric) (2.4.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->torch_geometric) (2025.4.26)\n",
-            "Requirement already satisfied: zipp>=3.20 in /usr/local/lib/python3.11/dist-packages (from importlib-metadata>=5->cmudict->textstat) (3.21.0)\n",
-            "Downloading textstat-0.7.7-py3-none-any.whl (175 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m175.3/175.3 kB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading torch_geometric-2.6.1-py3-none-any.whl (1.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m30.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading cmudict-1.0.32-py3-none-any.whl (939 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m939.4/939.4 kB\u001b[0m \u001b[31m67.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading pyphen-0.17.2-py3-none-any.whl (2.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m86.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pyphen, cmudict, torch_geometric, textstat\n",
-            "Successfully installed cmudict-1.0.32 pyphen-0.17.2 textstat-0.7.7 torch_geometric-2.6.1\n"
-          ]
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'speech_recognition'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-4d2f7cf2f021>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclassification_report\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mspeech_recognition\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtextstat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'speech_recognition'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
         }
       ]
     },
@@ -1491,14 +1439,14 @@
         "    print(\"All visualizations and results have been displayed above.\")"
       ],
       "metadata": {
+        "id": "7pbULRoYYX-q",
+        "outputId": "09c7fd07-930f-4d66-fe0b-197f2b97bd0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "id": "7pbULRoYYX-q",
-        "outputId": "09c7fd07-930f-4d66-fe0b-197f2b97bd0f"
+        }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
