--- a/Feature_Extractor.ipynb
+++ b/Feature_Extractor.ipynb
@@ -274,13 +274,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nHcrv0EN3muX",
-        "outputId": "726990cb-2af2-4226-e7dc-0a2627e737ea"
+        "outputId": "c8d158e6-4e8a-4814-d79f-ce87e0988e61"
       },
       "outputs": [
         {
@@ -304,6 +304,33 @@
       "metadata": {
         "id": "WrkxMgd53v8D"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import librosa\n",
+        "import soundfile as sf\n",
+        "from pathlib import Path\n",
+        "import pickle\n",
+        "import json\n",
+        "from typing import Dict, List, Tuple, Any\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "import opensmile\n",
+        "import torch\n",
+        "import whisper\n",
+        "from transformers import Wav2Vec2Processor, Wav2Vec2Model, BertTokenizer, BertModel\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns"
+      ],
+      "metadata": {
+        "id": "pJZObdjoWoEy"
+      },
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1237,23 +1264,7 @@
         }
       ],
       "source": [
-        "import os\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import librosa\n",
-        "import soundfile as sf\n",
-        "from pathlib import Path\n",
-        "import pickle\n",
-        "import json\n",
-        "from typing import Dict, List, Tuple, Any\n",
-        "import warnings\n",
-        "warnings.filterwarnings('ignore')\n",
-        "import opensmile\n",
-        "import torch\n",
-        "import whisper\n",
-        "from transformers import Wav2Vec2Processor, Wav2Vec2Model, BertTokenizer, BertModel\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
+        "\n",
         "\n",
         "class ADReSSoAnalyzer:\n",
         "    def __init__(self, base_path=\"/content/drive/MyDrive/Voice/extracted/ADReSSo21\"):\n",
@@ -3569,7 +3580,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyNdXIKg/2No4B1cw7+laRoi",
+      "authorship_tag": "ABX9TyNzhQvob1cmRy2jHBGPUxMO",
       "include_colab_link": true
     },
     "kernelspec": {
