Step 2: Extracting transcripts.

--- a/Feature_Extractor.ipynb
+++ b/Feature_Extractor.ipynb
@@ -1879,7 +1879,7 @@
         "id": "FAQVVECXn9mT",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 752,
+          "height": 1000,
           "referenced_widgets": [
             "3ef40f27d42646cd9ca35513cc1c4674",
             "50d0a96097814d749b866177272ceb94",
@@ -2198,7 +2198,65 @@
             "==================================================\n",
             "Step 1: Demonstrating acoustic features...\n",
             "\n",
-            "Showing features for diagnosis_ad:\n"
+            "Showing features for diagnosis_ad:\n",
+            "=== Acoustic Features for adrso047.wav ===\n",
+            "\n",
+            "1. eGeMAPS Features: 88 features\n",
+            "   Shape: (88,)\n",
+            "   Sample values: [25.866777    0.31971478 16.288124   26.47413    34.226044  ]\n",
+            "\n",
+            "2. MFCC Features:\n",
+            "   Mean: (13,) - [-283.20312    76.72154     4.923766   23.371506  -11.170574]\n",
+            "   Std: (13,) - [79.15861  30.19268  25.279158 24.67176  18.78886 ]\n",
+            "   Delta: (13,) - [ 0.32643536 -0.00845834 -0.01544069  0.00868111 -0.01617551]\n",
+            "   Delta-Delta: (13,) - [ 0.01663554  0.00127253  0.00217277 -0.0022048   0.00038056]\n",
+            "\n",
+            "3. Log-Mel Spectrogram Features:\n",
+            "   Mean: (80,) - [-23.605774 -18.057337 -11.690929 -10.313612  -7.541194]\n",
+            "   Std: (80,) - [11.996229   9.398557   6.6332574  6.546015   8.263119 ]\n",
+            "\n",
+            "4. Wav2Vec2 Features: (768,)\n",
+            "   Sample values: [-0.02854593 -0.00418571 -0.07545885 -0.05687367  0.00764664]\n",
+            "\n",
+            "5. Prosodic Features:\n",
+            "   f0_mean: 142.0958\n",
+            "   f0_std: 67.3784\n",
+            "   energy_mean: 0.0243\n",
+            "   energy_std: 0.0264\n",
+            "   zero_crossing_rate: 0.1436\n",
+            "   spectral_centroid: 1989.2703\n",
+            "   spectral_rolloff: 4091.9595\n",
+            "   duration: 60.3156\n",
+            "\n",
+            "\n",
+            "==================================================\n",
+            "Step 2: Extracting transcripts...\n",
+            "Extracting transcripts...\n",
+            "\n",
+            "Processing diagnosis_ad...\n",
+            "  Transcribing adrso047.wav...\n",
+            "  Transcribing adrso128.wav...\n",
+            "  Transcribing adrso110.wav...\n",
+            "  Transcribing adrso036.wav...\n",
+            "  Transcribing adrso045.wav...\n",
+            "  Transcribing adrso093.wav...\n",
+            "  Transcribing adrso112.wav...\n",
+            "  Transcribing adrso189.wav...\n",
+            "  Transcribing adrso089.wav...\n",
+            "  Transcribing adrso205.wav...\n",
+            "  Transcribing adrso060.wav...\n",
+            "  Transcribing adrso232.wav...\n",
+            "  Transcribing adrso075.wav...\n",
+            "  Transcribing adrso106.wav...\n",
+            "  Transcribing adrso063.wav...\n",
+            "  Transcribing adrso043.wav...\n",
+            "  Transcribing adrso206.wav...\n",
+            "  Transcribing adrso126.wav...\n",
+            "  Transcribing adrso109.wav...\n",
+            "  Transcribing adrso202.wav...\n",
+            "  Transcribing adrso071.wav...\n",
+            "  Transcribing adrso039.wav...\n",
+            "  Transcribing adrso209.wav...\n"
           ]
         }
       ]
