Step 5: Extracting linguistic features for BERT.

--- a/Feature_Extractor.ipynb
+++ b/Feature_Extractor.ipynb
@@ -2813,7 +2813,9 @@
             "Processing diagnosis_ad...\n",
             "  Extracting features for adrso047.wav...\n",
             "  Extracting features for adrso128.wav...\n",
-            "  Extracting features for adrso110.wav...\n"
+            "  Extracting features for adrso110.wav...\n",
+            "  Extracting features for adrso036.wav...\n",
+            "  Extracting features for adrso045.wav...\n"
           ]
         }
       ]
